# hamilflow

./: .gitignore  README.md  deepx_tools.py  hamilflow_projection.py  pyproject.toml  transform_k_to_r_pipeline.py  transform_k_to_r_projection.py
deepx_postdock/: __init__.py  band_analysis.py  jobflow.py  kspace.py  models.py  pipeline.py  utils.py
examples/band_structure/: band_structure_batch_example.py  band_structure_example.py  band_structure_single_task.py  band_structure_slurm.sh
examples/projection/: README.md  run_projection_array.sbatch  run_projection_batch.py  run_projection_batched_single_task.py  run_projection_overlap_only_single_task.py  run_projection_single_task.py  run_projection_submit_slurm.sh
hamilflow/: __init__.py  band_structure.py  jobflow.py  models.py  projection.py  utils.py
hamilflow/band_structures/: __init__.py  band_analysis.py  band_calculation.py
hamilflow/dft_workflows/: __init__.py  flows.py  flows_base.py  flows_core.py  jobs.py  kpoints.py  structure_generation.py  utils.py
hamilflow/projection/: __init__.py  batched.py  core.py  io.py  jobflow.py  kspace.py  models.py  removal.py
