[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamilflow"
version = "0.1.0"
description = "Community-maintained utilities for DeepH workflows (not an official DeepH package)."
authors = [
  {name = "Enrico Marazzi", email = "enrico.marazzi@uclouvain.be"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
jobflow = ["jobflow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hamilflow*"]
